src/test/deca/context/valid/not-empty-bloc-method.deca
// Description:
//    Déclare une méthode avec une instruction
//
// Resultats:
//    //
//
// Historique:
//    cree le 14/01/2023

class A{
    void instruction(){
        int i;
        println(1);
    }
}
