src/test/deca/context/invalid/declare-param-twice.deca
// Description:
//    Déclare un paramètre deux fois avec le même nom
//
// Resultats:
//    Erreur contextuelle   
//    Ligne 12: The parameter "x" has already been declared (rule 3.12)
//
// Historique:
//    cree le 16/01/2023

class A {
    void add(int x, int x){}
}
